src/objects/RT1__OpportunityRecording__c.object
<CustomObject>
    <fields>
        <fullName>RT1__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ReadyTalk Recording Playback History</relationshipLabel>
        <relationshipName>Recordings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RT1__RecordingDateTime__c</fullName>
        <label>Recording Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__Recording__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recording Title</label>
        <referenceTo>RT1__Recording__c</referenceTo>
        <relationshipLabel>Recordings</relationshipLabel>
        <relationshipName>OpportunityRecordings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recording</label>
    <nameField>
        <label>Recording ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recordings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>